src/test/resources/Parser/SyntaxErrors/TooManyArgumentsReturn.front
class A:
    f() -> char[] {
        return "Hello", 1;
    }